[project]
name = "gradio-think-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Новиков Илья",email = "nov.ilucha@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gradio (>=5.29.0,<6.0.0)",
    "openai (>=1.78.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
